# readymade

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  Dockerfile.hkp-rt  Dockerfile.hkp-rt.dockerignore  README.md  build-android.sh  build-ios.sh  build-linux.sh  build-windows.ps1  build.sh  pull_review_comments.sh  sign.sh
.agents/skills/source-command-new-node-service/: SKILL.md
.claude/commands/: new-board.md  new-node-service.md  pr-review.md
.github/workflows/: docker-publish.yml  meander-macos.yml  release-meander-linux.yml  release-meander-windows.yml  release-meander.yml
docs/content/llm/: howto-workflow.md
docs/content/services/: audio-io.md  skill-router.md  speech-to-text.md  text-generation.md
hkp-frontend/: package-lock.json  package.json  tailwind.config.js  vitest.config.ts
hkp-frontend/boards/: alpaca-board.json  current-time-board.json  dropitapp-board.json  game-board.json  live-location-demo-board.json  microphone-speaker-demo-board.json  next-bus-board.json  next-bus-switch-board.json  p2p-receiver-demo-board.json  p2p-sender-demo-board.json  send-ntfy-board.json  skill-router-demo-board.json  smooth-demo-board.json  speech-to-text-demo-board.json  text-generation-demo-board.json  text-generation-local-demo-board.json  text-to-speech-demo-board.json  voice-assistant-demo-board.json  voice-assistant-local-demo-board.json  voice-assistant-skills-demo-board.json
hkp-frontend/docs/todos/: scope-wiring-refactor.md  service-behavior-in-ui.md
hkp-frontend/src/: AppContext.tsx  BoardContext.tsx  MobileHostContext.tsx  Routes.tsx  VaultContext.tsx  common.tsx  demoCatalog.ts  demoRegistry.ts  index.css  router.ts  types.ts  vault.ts
hkp-frontend/src/auth/: Auth0Provider.tsx  useCloudLogin.ts  useCloudLogout.ts
hkp-frontend/src/cloud/: boardStorage.ts
hkp-frontend/src/components/: DragSource.tsx  DropTarget.tsx  MappingTable.tsx  Runtime.tsx  SaveBoardDialog.tsx
hkp-frontend/src/components/Toolbar/: AccountAvatar.tsx  ShareMenu.tsx  UpdateCloudButton.tsx  index.tsx
hkp-frontend/src/components/shared/: SelectorField.tsx
hkp-frontend/src/core/: boardContextTypes.ts  runtimeOperations.ts  serviceOperations.ts
hkp-frontend/src/facade/: FacadeRenderer.tsx  FacadeStateContext.ts  applyInput.ts  executeActions.ts  types.ts
hkp-frontend/src/facade/panels/: LayoutNode.tsx  widgetRegistry.tsx
hkp-frontend/src/platform/: PlatformContext.tsx
hkp-frontend/src/runtime/: ServiceUiContainer.tsx  ServiceWithDropBars.tsx  useBlockSwipeNavigation.ts
hkp-frontend/src/runtime/board/: runtimeUrl.ts  traversal.ts
hkp-frontend/src/runtime/browser/: BrowserRegistry.tsx  BrowserRuntimeApp.ts  UIRegistry.ts
hkp-frontend/src/runtime/discovery/: DiscoveryApi.ts  usePeerAuthorization.ts
hkp-frontend/src/runtime/graphql/: RuntimeGraphQL.tsx  RuntimeGraphQLApp.ts
hkp-frontend/src/runtime/rest/: RuntimeRest.tsx  RuntimeRestApi.ts  RuntimeRestApp.ts  RuntimeRestScope.ts  UIRegistry.ts
hkp-frontend/src/runtime/ui/: SubServicePipelineUI.tsx
hkp-frontend/src/ui-components/: AppearanceSettings.tsx  BipolarMeter.tsx  Editable.tsx  EditorDialog.tsx  JsonEditor.tsx  LineChart.tsx  ThemeContext.tsx
hkp-frontend/src/ui-components/json-editor/: helpers.ts
hkp-frontend/src/ui-components/primitives/: select.tsx
hkp-frontend/src/ui-components/service/: FlowInspectorPopup.tsx  ServiceFrame.tsx  ServiceHeader.tsx  ServiceName.tsx  ServiceOutputPlug.tsx  ServiceSettings.tsx
hkp-frontend/src/ui-components/toolbar/: AppMenu.tsx  DiscoverRuntimesPanel.tsx  ExistingRuntimesPanel.tsx  ManageRuntimesContent.tsx  ManageRuntimesDialog.tsx  NewRuntimePanel.tsx
hkp-frontend/src/views/cloud/: CloudLoginGate.tsx  CoordinatorsMenu.tsx  ExistingCoordinatorsPanel.tsx  ManageCoordinatorsDialog.tsx  NewBoardDialog.tsx  NewCoordinatorPanel.tsx  coordinatorClient.ts  index.tsx  useCoordinatorBridge.ts
hkp-frontend/src/views/playground/: BoardActions.ts  PlaygroundController.ts  PlaygroundInner.tsx  Sidebar.tsx  common.ts
hkp-frontend/src/views/start/: BoardDetails.tsx  Column.tsx  ColumnBrowser.tsx  NewsCarousel.tsx  Row.tsx  RuntimeDetails.tsx  StartPage.tsx  TopBar.tsx  demosSource.ts  emptyBoard.ts  imageUpload.ts  index.ts  model.ts  news.ts  start.css  store.ts  types.ts  useCloudBoardSources.ts  useCloudBoardsFolder.ts  useCloudSource.ts  (+2 more)
hkp-rt/config/: ws-audio-playback-example.json
hkp-rt/exe/: main.cpp
hkp-rt/lib/: CMakeLists.txt
hkp-rt/lib/include/: app.h  auth.h  discovery_hooks.h  server.h
hkp-rt/lib/include/types/: message.h
hkp-rt/lib/src/: app.cpp  runtime.cpp  runtime.h
hkp-rt/lib/src/common/: string_util.h
hkp-rt/lib/src/discovery/: discovery.cpp  discovery.h
hkp-rt/lib/src/http/: auth.cpp  server.cpp
hkp-rt/lib/src/services/http_server/: http_listener.cpp  http_server_subservices.cpp  http_server_subservices.h  http_session.cpp
hkp-rt/lib/src/types/: message.cpp
hkp-rt/tests/: CMakeLists.txt  auth.test.cpp
meander/: CMakeLists.txt
meander/backend/: frontendServer.cpp  frontendServer.h  main.cpp  main.mm  schemeHandler.cpp  schemeHandler.h  serviceRedirectHandler.cpp  settings.h  shareInbox.h  shareInbox.mm  shareRouter.cpp  shareRouter.h  vault.h
meander/frontend/: buildVersion.ts  copy-to-ios.sh  custom.d.ts  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.android.ts  vite.config.ios.ts  vite.config.ts
meander/frontend/src/: App.tsx  MeanderAppMenu.tsx  MeanderPlayground.tsx  MeanderSettingsDialog.tsx  MobileApp.tsx  RuntimeUserSync.tsx  StartPage.tsx  demoBoards.ts  main.tsx  useBackendRemotes.ts
meander/frontend/src/auth/: iosLogin.ts  meanderLogin.ts  pkce.ts
meander/frontend/src/backend/: browser.ts  meander.ts  types.ts
meander/frontend/src/platform/: MeanderPlatformProvider.tsx
meander/frontend/src/share/: BoardShareConsumer.tsx  ShareBoardPicker.tsx  ShareOverlay.tsx  desktopShareInbox.ts  shareInbox.ts  useShareFlow.ts
meander/macos/: Info.plist  Readymade.entitlements
meander/macos/ShareExtension/: Info.plist  ShareExtension.entitlements  ShareViewController.swift
(+75 files in other folders)
